fix: adjust body margin for consistent spacing

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   color: #f8f9fa;
   background-color: #151313;
   margin: 0px 30px;
+  margin-bottom: 50px;
 }
 
 header {
